--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
-# Core Analysis Stack
-pandas>=2.0.0
-numpy>=1.24.0
-plotly>=5.15.0
-yfinance>=0.2.28
-streamlit>=1.28.0
-scipy>=1.11.0
-
-# Portfolio Optimization - CRITICAL: cvxpy must be installed
-PyPortfolioOpt>=1.5.5
-cvxpy>=1.3.2
-cvxopt>=1.3.0
-
-# Supporting Libraries
-requests>=2.31.0
-lxml>=4.9.3
-multitasking>=0.0.11
-typing-extensions>=4.8.0
-python-dateutil>=2.8.2
-pytz>=2023.3.post1
+streamlit==1.30.0
+pandas==2.1.4
+numpy==1.24.4
+plotly==5.18.0
+yfinance==0.2.33
+scipy==1.11.4
+scikit-learn==1.3.2
+PyPortfolioOpt==1.5.5
+cvxpy==1.4.2
+ecos==2.0.13
+osqp==0.6.2.post8
+scs==3.2.4
