--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-streamlit==1.28.1
-pandas==2.1.3
-numpy==1.26.2
-plotly==5.17.0
-yfinance==0.2.31
-scipy==1.11.3
+streamlit==1.30.0
+pandas==2.1.4
+numpy==1.26.4
+plotly==5.18.0
+yfinance==0.2.33
+scipy==1.11.4
 scikit-learn==1.3.2
 PyPortfolioOpt==1.5.5
-cvxpy==1.3.2
+cvxpy==1.4.2
+ecos==2.0.13
+osqp==0.6.2.post8
+scs==3.2.4
