--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-streamlit==1.30.0
-pandas==2.1.4
-numpy==1.26.4
-plotly==5.18.0
-yfinance==0.2.33
-scipy==1.11.4
-scikit-learn==1.3.2
-PyPortfolioOpt==1.5.5
-cvxpy==1.4.2
-ecos==2.0.13
-osqp==0.6.2.post8
-scs==3.2.4
+streamlit>=1.30.0
+pandas>=2.0.3,<2.2
+numpy>=1.24.0,<2.0
+scipy>=1.10.0
+matplotlib>=3.7.0
+yfinance>=0.2.0
+# Consider removing or finding alternatives for problematic packages
+cvxpy>=1.3.0  # May need alternative
+osqp>=0.6.0
+scs>=3.0.0
