--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-streamlit>=1.30.0
-pandas>=2.0.3,<2.2
-numpy>=1.24.0,<2.0
-scipy>=1.10.0
-matplotlib>=3.7.0
-yfinance>=0.2.0
+streamlit==1.30.0
+pandas==2.0.3
+numpy==1.26.4
+scipy==1.11.0
+matplotlib==3.8.0
+yfinance==0.2.33
+plotly==5.18.0
+cvxpy==1.3.2
 # Consider removing or finding alternatives for problematic packages
-cvxpy>=1.3.0  # May need alternative
 osqp>=0.6.0
 scs>=3.0.0
+
