--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ scipy==1.11.0
 matplotlib==3.8.0
 yfinance==0.2.33
 plotly==5.18.0
+pyportfolioopt==1.5.5
 cvxpy==1.3.2
 # Consider removing or finding alternatives for problematic packages
 osqp>=0.6.0
 scs>=3.0.0
-
